# near-groth16-verifier

./: Cargo.toml  package.json
res/: near_groth16_verifier.wasm
src/: lib.rs  verifier.rs
