[package]
name = "near-groth16-verifier"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "*"
#near-sdk = "0.10.0"
near-sdk = { version = "0.9.2", path = "../near-sdk-rs/near-sdk"}
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
byte-strings = "0.1.3"
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
